--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
-CONNECTION_STRING=mongodb+srv://sasith:1234@cluster0.6u4t7.mongodb.net/Notes-app-backend?retryWrites=true&w=majority&appName=Cluster0
-ACCESTOKN=sasith
+M0NGO_URL=mongodb+srv://sasith:1234@cluster0.6u4t7.mongodb.net/Notes-app-backend?retryWrites=true&w=majority&appName=Cluster0
+PORT=3000
 
 
 EMAIL=petcaresystem9@gmail.com
